--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <meta name="description" content="ヴァンドーム青山 隈研吾 時計 貧血 意外な症状 - Iphone カバー 8 西島秀俊 88 万 横田めぐみ チオニ" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noarchive" /> 
-<meta name="google-site-verification" content="" />
+<meta name="google-site-verification" content="8BRCcJeXCa5Rm94fwEM_aHDjVCZb0PcOZ-fRO3bufHY" />
+<meta name="msvalidate.01" content="05CC9AADBC8ECB9D3DE7CCCA5DE800B5" />
 <link rel="canonical" href="https://adueka.github.io" />
 <link rel="shortcut icon" href="./favicon.ico" /> 
 <link rel="stylesheet" type="text/css" href="./styles.css" />
